# country-population-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db/: init.sql
src/: config.py  database.py  get_data.py  models.py  parser_factory.py  print_data.py  repository.py  service.py
src/parsers/: statstimes.py  wiki.py
