[tool.poetry]
name = "country-population-service"
version = "0.1.0"
description = "Service for analyzing country populations by region"
authors = ["Daniel <danya2zxc@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.41"
beautifulsoup4 = "^4.13.4"
asyncpg = "^0.30.0"
aiohttp = "^3.12.14"
pydantic-settings = "^2.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "venv",
]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "TID"]
ignore = ["E501"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"





